fix: adjust menu position on mobile (#6)
* Update padding of the menu

--- a/src/index.css
+++ b/src/index.css
@@ -190,6 +190,8 @@ p {
   display: flex;
   justify-content: space-between;
   padding: 10px;
+  position: static;
+  top: 0;
 }
 
 .nav-links {
@@ -478,6 +480,12 @@ p {
 
 .github-icons .github-icon:hover {
   background-color: var(--deep-blue);
+}
+
+@media screen and (max-device-width: 480px) and (orientation: portrait) {
+  .portfolio-card {
+    top: 55%;
+  }
 }
 
 @media only screen and (max-width: 1100px) {
